--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "size": "size-limit",
     "analyze": "size-limit --why",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "dependencies": {
     "@popperjs/core": "^2.5.4",
@@ -39,6 +40,7 @@
     "@storybook/addons": "^6.1.10",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.1.10",
+    "@storybook/storybook-deployer": "^2.8.7",
     "@types/classnames": "^2.2.11",
     "@types/node": "14.14.10",
     "@types/react": "^17.0.0",
