--- a/package.json
+++ b/package.json
@@ -23,45 +23,45 @@
     "deploy-storybook": "storybook-to-ghpages"
   },
   "dependencies": {
-    "@popperjs/core": "^2.5.4",
-    "classnames": "^2.2.6",
-    "react-popper": "^2.2.4"
+    "@popperjs/core": "2.5.4",
+    "classnames": "2.2.6",
+    "react-popper": "2.2.4"
   },
   "peerDependencies": {
     "date-fns": "^2.0.0",
     "react": ">=16"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@size-limit/preset-small-lib": "^4.9.1",
-    "@storybook/addon-essentials": "^6.1.10",
-    "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-links": "^6.1.10",
-    "@storybook/addons": "^6.1.10",
-    "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.1.10",
-    "@storybook/storybook-deployer": "^2.8.7",
-    "@types/classnames": "^2.2.11",
-    "@types/node": "14.14.10",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "autoprefixer": "^9.0.0",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.0.1",
-    "cssnano": "^4.1.10",
-    "date-fns": "^2.16.1",
-    "husky": "^4.3.5",
-    "node-sass": "^5.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-is": "^17.0.1",
-    "rollup-plugin-postcss": "^4.0.0",
-    "sass-loader": "^10.1.0",
-    "size-limit": "^4.9.1",
-    "style-loader": "^2.0.0",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.0.3",
-    "typescript": "^4.1.3"
+    "@babel/core": "7.12.10",
+    "@size-limit/preset-small-lib": "4.9.1",
+    "@storybook/addon-essentials": "6.1.11",
+    "@storybook/addon-info": "5.3.21",
+    "@storybook/addon-links": "6.1.11",
+    "@storybook/addons": "6.1.11",
+    "@storybook/preset-scss": "1.0.3",
+    "@storybook/react": "6.1.11",
+    "@storybook/storybook-deployer": "2.8.7",
+    "@types/classnames": "2.2.11",
+    "@types/node": "14.14.13",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "autoprefixer": "9.8.6",
+    "babel-loader": "8.2.2",
+    "css-loader": "5.0.1",
+    "cssnano": "4.1.10",
+    "date-fns": "2.16.1",
+    "husky": "4.3.6",
+    "node-sass": "5.0.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-is": "17.0.1",
+    "rollup-plugin-postcss": "4.0.0",
+    "sass-loader": "10.1.0",
+    "size-limit": "4.9.1",
+    "style-loader": "2.0.0",
+    "tsdx": "0.14.1",
+    "tslib": "2.0.3",
+    "typescript": "3.9.7"
   },
   "husky": {
     "hooks": {
