--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "deploy-storybook": "storybook-to-ghpages"
   },
   "dependencies": {
-    "@popperjs/core": "2.5.4",
+    "@popperjs/core": "2.6.0",
     "classnames": "2.2.6",
     "react-popper": "2.2.4"
   },
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@babel/core": "7.12.10",
     "@size-limit/preset-small-lib": "4.9.1",
+    "@storybook/addon-docs": "6.1.11",
     "@storybook/addon-essentials": "6.1.11",
     "@storybook/addon-info": "5.3.21",
     "@storybook/addon-links": "6.1.11",
@@ -43,7 +44,7 @@
     "@storybook/react": "6.1.11",
     "@storybook/storybook-deployer": "2.8.7",
     "@types/classnames": "2.2.11",
-    "@types/node": "14.14.13",
+    "@types/node": "14.14.14",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "autoprefixer": "9.8.6",
@@ -72,11 +73,11 @@
   "size-limit": [
     {
       "path": "dist/react-next-dates.cjs.production.min.js",
-      "limit": "10 KB"
+      "limit": "20 KB"
     },
     {
       "path": "dist/react-next-dates.esm.js",
-      "limit": "10 KB"
+      "limit": "20 KB"
     }
   ],
   "engines": {
