--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-is": "17.0.1",
+    "rollup-plugin-copy": "3.3.0",
     "rollup-plugin-postcss": "4.0.0",
     "sass-loader": "10.1.0",
     "size-limit": "4.9.1",
