--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.0",
+  "version": "0.0.0",
   "name": "react-next-dates",
   "author": "Sylvain Castaing",
   "license": "MIT",
@@ -7,8 +7,7 @@
   "module": "dist/react-next-dates.esm.js",
   "typings": "dist/index.d.ts",
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "scripts": {
     "start": "tsdx watch",
@@ -83,5 +82,8 @@
   ],
   "engines": {
     "node": ">=10"
+  },
+  "np": {
+    "yarn": false
   }
 }
