--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "version": "0.1.0-1",
   "name": "react-next-dates",
-  "author": "Sylvain Castaing",
+  "description": "An another date, date-time and date range picker",
+  "author": "Sylvain Castaing @sylcastaing",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sylcastaing/react-next-dates.git"
+  },
+  "bugs": "https://github.com/sylcastaing/react-next-dates/issues",
   "main": "dist/index.js",
   "module": "dist/react-next-dates.esm.js",
   "typings": "dist/index.d.ts",
@@ -19,7 +25,9 @@
     "analyze": "size-limit --why",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "deploy-storybook": "storybook-to-ghpages"
+    "deploy-storybook": "storybook-to-ghpages",
+    "version": "tsdx build && storybook-to-ghpages",
+    "release": "np"
   },
   "dependencies": {
     "@popperjs/core": "2.6.0",
@@ -53,6 +61,7 @@
     "date-fns": "2.16.1",
     "husky": "4.3.6",
     "node-sass": "5.0.0",
+    "np": "7.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-is": "17.0.1",
@@ -82,8 +91,5 @@
   ],
   "engines": {
     "node": ">=10"
-  },
-  "np": {
-    "yarn": false
   }
 }
