[documentation] update readme and storybook

--- a/package.json
+++ b/package.json
@@ -2,6 +2,20 @@
   "version": "0.1.0-2",
   "name": "react-next-dates",
   "description": "An another date, date-time and date range picker",
+  "keywords": [
+    "react",
+    "typescript",
+    "date",
+    "date-picker",
+    "datepicker",
+    "date-range-picker",
+    "daterangepicker",
+    "date-time-picker",
+    "datetimepicker",
+    "calendar",
+    "clock",
+    "date-fns"
+  ],
   "author": "Sylvain Castaing @sylcastaing",
   "license": "MIT",
   "repository": {
@@ -23,7 +37,7 @@
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 --no-manager-cache",
     "build-storybook": "build-storybook",
     "deploy-storybook": "storybook-to-ghpages",
     "version": "tsdx build && storybook-to-ghpages",
@@ -50,6 +64,7 @@
     "@storybook/preset-scss": "1.0.3",
     "@storybook/react": "6.1.11",
     "@storybook/storybook-deployer": "2.8.7",
+    "@storybook/theming": "6.1.11",
     "@types/classnames": "2.2.11",
     "@types/node": "14.14.14",
     "@types/react": "17.0.0",
