chore: upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
     "build-storybook": "build-storybook",
     "deploy-storybook": "storybook-to-ghpages",
     "version": "tsdx build && storybook-to-ghpages",
-    "release": "np"
+    "release": "np",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "dependencies": {
-    "@popperjs/core": "2.6.0",
+    "@popperjs/core": "2.7.1",
     "classnames": "2.2.6",
     "react-popper": "2.2.4"
   },
@@ -56,45 +59,41 @@
     "react-dom": ">=16"
   },
   "devDependencies": {
-    "@babel/core": "7.12.10",
-    "@size-limit/preset-small-lib": "4.9.1",
-    "@storybook/addon-docs": "6.1.11",
-    "@storybook/addon-essentials": "6.1.11",
+    "@babel/core": "7.12.17",
+    "@size-limit/preset-small-lib": "4.9.2",
+    "@storybook/addon-docs": "6.1.18",
+    "@storybook/addon-essentials": "6.1.18",
     "@storybook/addon-info": "5.3.21",
-    "@storybook/addon-links": "6.1.11",
-    "@storybook/addons": "6.1.11",
+    "@storybook/addon-links": "6.1.18",
+    "@storybook/addons": "6.1.18",
     "@storybook/preset-scss": "1.0.3",
-    "@storybook/react": "6.1.11",
+    "@storybook/react": "6.1.18",
     "@storybook/storybook-deployer": "2.8.7",
-    "@storybook/theming": "6.1.11",
+    "@storybook/theming": "6.1.18",
     "@types/classnames": "2.2.11",
-    "@types/node": "14.14.20",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
+    "@types/node": "14.14.30",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.1",
     "autoprefixer": "9.8.6",
     "babel-loader": "8.2.2",
-    "css-loader": "5.0.1",
+    "css-loader": "5.0.2",
     "cssnano": "4.1.10",
-    "date-fns": "2.16.1",
-    "husky": "4.3.7",
+    "date-fns": "2.17.0",
+    "husky": "5.0.9",
     "node-sass": "5.0.0",
-    "np": "7.2.0",
+    "np": "7.4.0",
+    "pinst": "2.1.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-is": "17.0.1",
-    "rollup-plugin-copy": "3.3.0",
+    "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-postcss": "4.0.0",
     "sass-loader": "10.1.0",
-    "size-limit": "4.9.1",
+    "size-limit": "4.9.2",
     "style-loader": "2.0.0",
     "tsdx": "0.14.1",
     "tslib": "2.1.0",
     "typescript": "3.9.7"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
   },
   "size-limit": [
     {
