--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.1",
     "autoprefixer": "9.8.6",
+    "babel-jest": "26.6.3",
     "babel-loader": "8.2.2",
     "css-loader": "5.0.2",
     "cssnano": "4.1.10",
