build: switch to dts-cli and pnpm

--- a/package.json
+++ b/package.json
@@ -30,28 +30,28 @@
     "dist"
   ],
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test --passWithNoTests",
-    "test-watch": "tsdx test --watch",
-    "coverage": "tsdx test --coverage",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
+    "start": "dts watch",
+    "build": "dts build",
+    "test": "dts test --passWithNoTests",
+    "test-watch": "dts test --watch",
+    "coverage": "dts test --coverage",
+    "lint": "dts lint",
+    "prepare": "dts build",
     "size": "size-limit",
     "analyze": "size-limit --why",
     "storybook": "start-storybook -p 6006 --no-manager-cache",
     "build-storybook": "build-storybook",
     "deploy-storybook": "storybook-to-ghpages",
-    "version": "tsdx build && storybook-to-ghpages",
+    "version": "dts build && storybook-to-ghpages",
     "release": "np",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable"
   },
   "dependencies": {
-    "@popperjs/core": "2.7.1",
-    "classnames": "2.2.6",
-    "react-popper": "2.2.4"
+    "@popperjs/core": "2.11.4",
+    "classnames": "2.3.1",
+    "react-popper": "2.2.5"
   },
   "peerDependencies": {
     "date-fns": "^2.0.0",
@@ -59,42 +59,45 @@
     "react-dom": ">=16"
   },
   "devDependencies": {
-    "@babel/core": "7.12.17",
-    "@size-limit/preset-small-lib": "4.9.2",
-    "@storybook/addon-docs": "6.1.18",
-    "@storybook/addon-essentials": "6.1.18",
+    "@babel/core": "7.17.8",
+    "@size-limit/preset-small-lib": "7.0.8",
+    "@storybook/addon-docs": "6.4.19",
+    "@storybook/addon-essentials": "6.4.19",
     "@storybook/addon-info": "5.3.21",
-    "@storybook/addon-links": "6.1.18",
-    "@storybook/addons": "6.1.18",
+    "@storybook/addon-links": "6.4.19",
+    "@storybook/addon-postcss": "2.0.0",
+    "@storybook/addons": "6.4.19",
     "@storybook/preset-scss": "1.0.3",
-    "@storybook/react": "6.1.18",
-    "@storybook/storybook-deployer": "2.8.7",
-    "@storybook/theming": "6.1.18",
-    "@types/classnames": "2.2.11",
-    "@types/node": "14.14.30",
-    "@types/react": "17.0.2",
-    "@types/react-dom": "17.0.1",
-    "autoprefixer": "9.8.6",
-    "babel-jest": "26.6.3",
-    "babel-loader": "8.2.2",
-    "css-loader": "5.0.2",
-    "cssnano": "4.1.10",
-    "date-fns": "2.17.0",
-    "husky": "5.0.9",
-    "node-sass": "5.0.0",
-    "np": "7.4.0",
-    "pinst": "2.1.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-is": "17.0.1",
+    "@storybook/react": "6.4.19",
+    "@storybook/storybook-deployer": "2.8.11",
+    "@storybook/theming": "6.4.19",
+    "@tsconfig/create-react-app": "1.0.2",
+    "@types/classnames": "2.3.1",
+    "@types/node": "17.0.23",
+    "@types/react": "17.0.43",
+    "@types/react-dom": "17.0.14",
+    "autoprefixer": "10.4.4",
+    "babel-loader": "8.2.4",
+    "css-loader": "5.2.7",
+    "cssnano": "5.1.5",
+    "date-fns": "2.28.0",
+    "dts-cli": "1.4.0",
+    "husky": "7.0.4",
+    "node-sass": "7.0.1",
+    "np": "7.6.1",
+    "pinst": "3.0.0",
+    "postcss": "8.4.12",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-is": "17.0.2",
     "rollup-plugin-copy": "3.4.0",
-    "rollup-plugin-postcss": "4.0.0",
-    "sass-loader": "10.1.0",
-    "size-limit": "4.9.2",
+    "rollup-plugin-postcss": "4.0.2",
+    "sass-loader": "10.1.1",
+    "size-limit": "7.0.8",
+    "storybook-addon-sass-postcss": "0.1.0",
     "style-loader": "2.0.0",
-    "tsdx": "0.14.1",
-    "tslib": "2.1.0",
-    "typescript": "3.9.7"
+    "tslib": "2.3.1",
+    "typescript": "4.6.3"
   },
   "size-limit": [
     {
@@ -106,6 +109,9 @@
       "limit": "20 KB"
     }
   ],
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
   "engines": {
     "node": ">=10"
   }
