--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -7,6 +7,11 @@ jobs:
       CI_JOB_NUMBER: 1
     steps:
       - uses: actions/checkout@v1
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: latest
+
       - uses: andresz1/size-limit-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
