--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "singleQuote": true,
   "semi": true,
   "tabWidth": 2,
-  "jsxBracketSameLine": true,
+  "bracketSameLine": true,
   "printWidth": 120,
   "trailingComma": "all",
   "arrowParens": "avoid"
