fix(calendar): month year disabled when min or max

--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
     "@storybook/storybook-deployer": "2.8.11",
     "@storybook/theming": "6.4.19",
     "@tsconfig/create-react-app": "1.0.2",
-    "@types/classnames": "2.3.1",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
@@ -87,6 +86,7 @@
     "np": "7.6.1",
     "pinst": "3.0.0",
     "postcss": "8.4.12",
+    "prettier": "2.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "17.0.2",
