--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "cssnano": "5.1.5",
     "date-fns": "2.28.0",
     "dts-cli": "1.4.0",
+    "eslint": "8.12.0",
     "husky": "7.0.4",
     "node-sass": "7.0.1",
     "np": "7.6.1",
