--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-2",
+  "version": "1.0.0",
   "name": "react-next-dates",
   "description": "Simple and Customizable DatePicker, DateRangePicker and TimePicker for React.",
   "keywords": [
