--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@storybook/storybook-deployer": "2.8.11",
     "@storybook/theming": "6.4.19",
     "@tsconfig/create-react-app": "1.0.2",
+    "@types/jest": "27.5.1",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
